core : start command send configuration file with related assets to bitfan which store and load it from data folder
